syntax = "proto3";
package ltk;

// set go package name to pb
option go_package = "pb";

import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

service RoomService {
    rpc CreateRoom (CreateRoomRequest) returns (CreateRoomResponse) {
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "创建房间"
            description: ""
        };
        option (google.api.http) = {
            post: "/v1/rooms"
            body: "*"
        };
    }
    rpc ComeIntoRoom (ComeIntoRoomRequest) returns (ComeIntoRoomResponse) {
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "进入房间"
            description: ""
        };
        option (google.api.http) = {
            post: "/v1/rooms/{room_id=*}/come_into"
            body: "*"
        };
    }
    rpc DescribeRooms (DescribeRoomsRequest) returns (DescribeRoomsResponse) {
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "查看当前房间列表"
            description: ""
        };
        option (google.api.http) = {
            get: "/v1/rooms"
        };
    }
}

message CreateRoomRequest {
    google.protobuf.StringValue room_nick_name = 1;
}

message CreateRoomResponse {
    google.protobuf.StringValue room_id = 1;
}

message ComeIntoRoomRequest {
    string room_id = 1;
}

message ComeIntoRoomResponse {
    google.protobuf.StringValue room_id = 1;
}

message DescribeRoomsRequest {}

message DescribeRoomsResponse {
    repeated Room rooms = 1;
}

message Room {
    google.protobuf.StringValue room_id = 1;
    google.protobuf.StringValue room_nick_name = 2;
    repeated string user_nick_names = 3;
}